--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
   position: fixed;
   top: 0;
   color: black;
-  background-color: #f2f2f4;
+  background-color: #ececee;
   z-index: 10;
   border-radius: 20px;
   transition: background-color 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
@@ -125,7 +125,7 @@ body {
 }
 
 .our-products {
-  background-color: #f2f2f4;
+  background-color: #cecece;
   color: #0c0f0a;
   padding-block: 2em;
   margin-block-start: 1.5em;
@@ -139,7 +139,6 @@ body {
   width: auto;
   margin-inline: auto;
 }
-
 
 .product-title {
   font-size: 27px;
@@ -156,7 +155,7 @@ body {
 }
 .product-container {
   flex-basis: 33.33%;
-  transform: scale(.7);
+  transform: scale(0.7);
   opacity: 0;
 }
 .showX {
@@ -164,8 +163,88 @@ body {
   opacity: 1;
   transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 700ms;
 }
-.showZ{
+.showZ {
   transform: scale(1);
   opacity: 1;
   transition: all cubic-bezier(0.175, 0.885, 0.32, 1.275) 700ms;
+}
+
+.testimonial-img {
+  height: 300px;
+  width: auto;
+  margin-inline: auto;
+}
+
+.testimonials {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-block: 5em;
+}
+
+.testimonial-container {
+  width: 400px;
+}
+
+.testimonials-container {
+}
+
+.testimonials-title {
+  margin-block: 1em;
+  font-size: 60px;
+  font-weight: 100;
+  text-align: center;
+}
+
+.testimonial-content {
+  width: 80%;
+  font-size: 23px;
+  margin-inline: auto;
+  padding-block: 1em;
+}
+
+footer {
+  display: flex;
+  background-color: #cecece;
+  padding-block: 2em;
+  color: #0c0f0a;
+  flex-direction: column;
+}
+.row-one {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.footer-logo {
+  height: 100px;
+  width: auto;
+  filter: invert(50%);
+}
+
+.logo-title {
+  font-weight: 200;
+}
+
+.col-two {
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.25em;
+  font-size: 20px;
+}
+
+.col-three {
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.25em;
+  font-size: 20px;
+}
+
+.contact-title {
+  font-weight: 300;
+}
+
+.copyright{
+  text-align: center;
+  font-size: 22px;
 }
