--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ body {
   padding-block: 0.5em;
   position: fixed;
   top: 0;
-  color: black;
-  background-color: #ececee;
+  color: #cecece;
+  background-color: #0c0f0a;
   z-index: 10;
   border-radius: 20px;
   transition: background-color 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
@@ -37,6 +37,8 @@ body {
 }
 .nav-icons {
   height: 35px;
+  filter: invert(100%);
+  margin-inline-end: 2em;
 }
 
 .nav-left {
@@ -185,8 +187,15 @@ body {
 
 .testimonial-container {
   width: 400px;
+  transform: translateY(200px);
+  opacity: 0;
 }
 
+.testimonialSlide {
+  transform: translateY(0);
+  opacity: 1;
+  transition: all cubic-bezier(0.175, 0.885, 0.32, 1.275) 700ms;
+}
 .testimonials-container {
 }
 
@@ -244,7 +253,8 @@ footer {
   font-weight: 300;
 }
 
-.copyright{
+.copyright {
   text-align: center;
   font-size: 22px;
 }
+
