--- a/style.css
+++ b/style.css
@@ -172,9 +172,11 @@ body {
 }
 
 .testimonial-img {
-  height: 300px;
-  width: auto;
+  width: 250px;
+  aspect-ratio: 1;
   margin-inline: auto;
+  object-fit: cover;
+  border-radius: 50%;
 }
 
 .testimonials {
@@ -183,22 +185,38 @@ body {
   align-items: center;
   text-align: center;
   margin-block: 5em;
+  gap: 4em;
 }
 
 .testimonial-container {
   width: 400px;
-  transform: translateY(200px);
+  transform: translateY(300px);
   opacity: 0;
 }
 
 .testimonialSlide {
   transform: translateY(0);
   opacity: 1;
-  transition: all cubic-bezier(0.175, 0.885, 0.32, 1.275) 700ms;
-}
-.testimonials-container {
+  animation: slideIn 700ms cubic-bezier(0.175, 0.885, 0.32, 1.275) backwards;
 }
 
+.testimonialSlide:nth-child(2) {
+  animation-delay: 200ms;
+}
+.testimonialSlide:nth-child(3) {
+  animation-delay: 400ms;
+}
+
+@keyframes slideIn {
+  from {
+    transform: translateY(200px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 .testimonials-title {
   margin-block: 1em;
   font-size: 60px;
@@ -207,8 +225,9 @@ body {
 }
 
 .testimonial-content {
-  width: 80%;
-  font-size: 23px;
+  width: 100%;
+  line-height: 1.5;
+  font-size: 19px;
   margin-inline: auto;
   padding-block: 1em;
 }
@@ -257,4 +276,3 @@ footer {
   text-align: center;
   font-size: 22px;
 }
-
